Added img link to JSON & styling

--- a/login.html
+++ b/login.html
@@ -1,7 +1,12 @@
 <link href="style.css" rel="stylesheet">
-<div class="login-form">
+
+<body>
+  <div id="myHeader"></div>
+  <div class="login-form">
     <h2>Welcome to the stealing party.. Let's get you logged in!</h2>
     <input class="input" label="E-mail" id="email" placeholder="E-mail" type="email" />
     <input class="input" label="Password" id="password" placeholder="Password" type="password" />
     <button class="login-btn" @click="say('hello')">Log in</button>
   </div>
+  <div id="myFooter"></div>
+</body>
