Fixed header and links

--- a/index.html
+++ b/index.html
@@ -14,31 +14,23 @@
 
 <div class="content">
     <div class="menu">
-        <div class="menu-item col-3">
-            <button>
-                Audio
-            </button>
-        </div>
-        <div class="menu-item col-3">
-            <button>
-                Video
-            </button>
-        </div>
-        <div class="menu-item col-3">
-            <button>
-                Foto
-            </button>
-        </div>
-        <div class="menu-item col-3">
-            <button>
-                Citi
-            </button>
-        </div>
+        <button class="filterButton">
+            Audio
+        </button>
+        <button class="filterButton">
+            Video
+        </button>
+        <button class="filterButton">
+            Photo
+        </button>
+        <button class="filterButton">
+            Other
+        </button>
     </div>
 
     <div class="foto">
         <div class="section-title">
-            <h5>Foto</h5>
+            <h5>Photo</h5>
         </div>
         <div class="card-container row">
             <div class="card-box col-3">
