--- a/profils.html
+++ b/profils.html
@@ -38,7 +38,7 @@
             </div>
             <div class="user-purchases">
                 <div class="section-title">
-                    <h1>Mani pirkumi</h1>
+                    <h1>My purchases</h1>
                 </div>
                 <div class="purchase-list">
 
@@ -46,14 +46,14 @@
             </div>
             <div class="user-feedback">
                 <div class="section-title">
-                    <h1>Atsauksmes</h1>
+                    <h1>Reviews</h1>
                 </div>
                 <div class="feedback-table row">
                     <table>
                         <tr >
-                            <th style="width: 20%;">Lietotājs</th>
-                            <th style="width: 60%;">Atsauksme</th>
-                            <th style="width: 20%;">Novērtējums</th>
+                            <th style="width: 20%;">User</th>
+                            <th style="width: 60%;">Description</th>
+                            <th style="width: 20%;">Rating</th>
                         </tr>
 
                         <tr>
