Dynamic card rendering

--- a/index.html
+++ b/index.html
@@ -1,133 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steal</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
 
 </head>
+
 <body>
-<div id="myHeader"></div>
+    <div id="myHeader"></div>
 
-<div class="content">
-    <div class="menu">
-        <div class="menu-item col-3">
-            <button>
-                Audio
-            </button>
+    <div class="content">
+        <div class="menu">
+            <div class="menu-item col-3">
+                <button>
+                    Audio
+                </button>
+            </div>
+            <div class="menu-item col-3">
+                <button>
+                    Video
+                </button>
+            </div>
+            <div class="menu-item col-3">
+                <button>
+                    Foto
+                </button>
+            </div>
+            <div class="menu-item col-3">
+                <button>
+                    Citi
+                </button>
+            </div>
         </div>
-        <div class="menu-item col-3">
-            <button>
-                Video
-            </button>
+
+
+
+        <div class="foto cards">
+            <div class="section-title">
+                <h5>Foto</h5>
+            </div>
+
         </div>
-        <div class="menu-item col-3">
-            <button>
-                Foto
-            </button>
+
+        <div class="audio row cards">
+            <div class="section-title">
+                <h5>Audio</h5>
+            </div>
         </div>
-        <div class="menu-item col-3">
-            <button>
-                Citi
-            </button>
+
+        <div class="video row cards">
+            <div class="section-title">
+                <h5>Video</h5>
+            </div>
+            
         </div>
+
     </div>
 
-    <div class="foto">
-        <div class="section-title">
-            <h5>Foto</h5>
-        </div>
-        <div class="card-container row">
-            <div class="card-box col-3">
-                <div class="card">
-                    <div class="card-image">
-                        <img src="Images/Screenshot.jpg">
-                    </div>
-                    <h6 class="card-text">Title</h6>
-                    <p class="card-text">Description</p>
-                    <div class="price">
-                        <p>100$</p>
-                    </div>
-                </div>
-            </div>
-            <div class="card-box col-3">
-                <div class="card">
-                    <div class="card-image">
-                        <img src="Images/Screenshot.jpg">
-                    </div>
-                    <h6 class="card-text">Title</h6>
-                    <p class="card-text">Description</p>
-                    <div class="price">
-                        <p>100$</p>
-                    </div>
-                </div>
-            </div>
-            <div class="card-box col-3">
-                <div class="card">
-                    <div class="card-image">
-                        <img src="Images/Screenshot.jpg">
-                    </div>
-                    <h6 class="card-text">Title</h6>
-                    <p class="card-text">Description</p>
-                    <div class="price">
-                        <p>100$</p>
-                    </div>
-                </div>
-            </div>
-            <div class="card-box col-3">
-                <div class="card">
-                    <div class="card-image">
-                        <img src="Images/Screenshot.jpg">
-                    </div>
-                    <h6 class="card-text">Title</h6>
-                    <p class="card-text">Description</p>
-                    <div class="price">
-                        <p>100$</p>
-                    </div>
-                </div>
-            </div>
-            <div class="card-box col-3">
-                <div class="card">
-                    <div class="card-image">
-                        <img src="Images/Screenshot.jpg">
-                    </div>
-                    <h6 class="card-text">Title</h6>
-                    <p class="card-text">Description</p>
-                    <div class="price">
-                        <p>100$</p>
-                    </div>
-                </div>
-            </div>
+    <div id="myFooter"></div>
 
-        </div>
-    </div>
-
-    <div class="audio row">
-        <div class="section-title">
-            <h5>Audio</h5>
-        </div>
-        <div class="card-container">
-
-        </div>
-    </div>
-
-    <div class="video row">
-        <div class="section-title">
-            <h5>Video</h5>
-        </div>
-        <div class="card-container">
-
-        </div>
-    </div>
-
-</div>
-
-<div id="myFooter"></div>
-
-<script src="js/main.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="./js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
