--- a/login.html
+++ b/login.html
@@ -1,12 +1,13 @@
 <link href="style.css" rel="stylesheet">
 
-<body>
-  <div id="myHeader"></div>
-  <div class="login-form">
-    <h2>Welcome to the stealing party.. Let's get you logged in!</h2>
-    <input class="input" label="E-mail" id="email" placeholder="E-mail" type="email" />
-    <input class="input" label="Password" id="password" placeholder="Password" type="password" />
-    <button class="login-btn" @click="say('hello')">Log in</button>
+<div>
+    <div id="myHeader"></div>
+    <div class="login-form">
+      <h2>Welcome to the stealing party.. Let's get you logged in!</h2>
+      <input class="input" label="E-mail" id="email" placeholder="E-mail" type="email" />
+      <input class="input" label="Password" id="password" placeholder="Password" type="password" />
+      <button class="login-btn" @click="say('hello')">Log in</button>
+    </div>
+    <div id="myFooter"></div>
   </div>
-  <div id="myFooter"></div>
-</body>
+  <script type="text/javascript" src="./js/main.js" ></script>
