--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
 
-        <div class="foto cards">
+        <div class="foto row cards">
             <div class="section-title">
                 <h5>Foto</h5>
             </div>
@@ -58,7 +58,7 @@
             <div class="section-title">
                 <h5>Video</h5>
             </div>
-            
+
         </div>
 
     </div>
