--- a/login.html
+++ b/login.html
@@ -1,13 +1,15 @@
 <link href="style.css" rel="stylesheet">
 
-<div>
-    <div id="myHeader"></div>
-    <div class="login-form">
-      <h2>Welcome to the stealing party.. Let's get you logged in!</h2>
-      <input class="input" label="E-mail" id="email" placeholder="E-mail" type="email" />
-      <input class="input" label="Password" id="password" placeholder="Password" type="password" />
-      <button class="login-btn" @click="say('hello')">Log in</button>
-    </div>
-    <div id="myFooter"></div>
+<div >
+  <div id="myHeader"></div>
+  <div class="login-page">
+  <div class="login-form">
+    <h2>Welcome to the stealing party.. Let's get you logged in!</h2>
+    <input class="input" label="E-mail" id="email" placeholder="E-mail" type="email" />
+    <input class="input" label="Password" id="password" placeholder="Password" type="password" />
+    <button class="login-btn" @click="say('hello')">Log in</button>
   </div>
-  <script type="text/javascript" src="./js/main.js" ></script>
+</div>
+  <div id="myFooter"></div>
+</div>
+<script type="text/javascript" src="./js/main.js"></script>
