Fixed profile page

--- a/profils.html
+++ b/profils.html
@@ -15,7 +15,7 @@
 <body>
     <div id="myHeader"></div>
 
-    <div class="content">
+    <div class="content" style="color:#bdf2e2;">
         <div class="profile-container">
             <div class="user-info">
 
