--- a/login.html
+++ b/login.html
@@ -1,13 +1,28 @@
-<link href="style.css" rel="stylesheet">
-
-<div>
-    <div id="myHeader"></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Log in</title>
+  <link href="style.css" rel="stylesheet">
+</head>
+<body>
+  <div id="myHeader"></div>
+  <div class="content">
     <div class="login-form">
       <h2>Welcome to the stealing party.. Let's get you logged in!</h2>
       <input class="input" label="E-mail" id="email" placeholder="E-mail" type="email" />
       <input class="input" label="Password" id="password" placeholder="Password" type="password" />
       <button class="login-btn" @click="say('hello')">Log in</button>
     </div>
-    <div id="myFooter"></div>
   </div>
+  <div id="myFooter"></div>
   <script type="text/javascript" src="./js/main.js" ></script>
+</body>
+</html>
+
+
+
+
+
