--- a/login.html
+++ b/login.html
@@ -15,6 +15,7 @@
       <input class="input" label="E-mail" id="email" placeholder="E-mail" type="email" />
       <input class="input" label="Password" id="password" placeholder="Password" type="password" />
       <button class="login-btn" @click="say('hello')">Log in</button>
+      <p style="font-size: medium;">Don't have an account? <a href="./signup.html">Sign up!</a></p>
     </div>
   </div>
   <div id="myFooter"></div>
