Signup and other stuff

--- a/signup.html
+++ b/signup.html
@@ -1,1 +1,29 @@
-sign up page
+<link href="style.css" rel="stylesheet">
+
+
+    <div>
+        <div id="myHeader"></div>
+        <div class="login-page">
+            <div class="login-form">
+                <h2>Wanna become a steal-master? Sign Up!</h2>
+                <input class="input" class="input" label="First Name" id="first-name" placeholder="First Name"
+                    type="text" required />
+                <input class="input" label="Surname" id="surname" placeholder="Surname" type="text" required />
+                <input class="input" label="E-mail" id="email" placeholder="E-mail" type="email" required />
+                <input class="input" label="Password" id="password" placeholder="Password" type="password" required />
+                <input class="input" label="Confirm Password" id="confirm-password" placeholder="Confirm Password"
+                    type="password" required />
+                <input class="input" label="Address" id="address" placeholder="Address" type="text" required />
+                <input class="input" label="Phone Number" id="phone-number" placeholder="Phone Number" type="tel"
+                    required />
+                <input class="input" label="Country" id="country" placeholder="Country" type="text" required />
+                <input type="checkbox" id="reg-checkbox">Agree with terms and conditions</input>
+                <button type="button" class="btnSumbit" onclick="check()">Sign Up</button>
+            </div>
+
+        </div>
+        <div id="myFooter"></div>
+    </div>
+
+<script type="text/javascript" src="./js/main.js"></script>
+<script type="text/javascript" src="./js/fieldValidation.js"></script>
