--- a/login.html
+++ b/login.html
@@ -1,15 +1,16 @@
 <link href="style.css" rel="stylesheet">
 
-<div >
+<div>
   <div id="myHeader"></div>
   <div class="login-page">
-  <div class="login-form">
-    <h2>Welcome to the stealing party.. Let's get you logged in!</h2>
-    <input class="input" label="E-mail" id="email" placeholder="E-mail" type="email" />
-    <input class="input" label="Password" id="password" placeholder="Password" type="password" />
-    <button class="login-btn" @click="say('hello')">Log in</button>
+    <div class="login-form">
+      <h2>Welcome to the stealing party.. Let's get you logged in!</h2>
+      <input class="input" label="E-mail" id="email" placeholder="E-mail" type="email" required />
+      <input class="input" label="Password" id="password" placeholder="Password" type="password" required />
+      <button type="button" class="btnSumbit" onclick="validate()">Log in</button>
+    </div>
   </div>
-</div>
   <div id="myFooter"></div>
 </div>
 <script type="text/javascript" src="./js/main.js"></script>
+<script type="text/javascript" src="./js/fieldValidation.js"></script>
