Added new pages, created Success and Fail payment pages

--- a/failedPayment.html
+++ b/failedPayment.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Log in</title>
+  <title>Failed payment</title>
   <link href="style.css" rel="stylesheet">
 </head>
 
@@ -13,11 +13,7 @@
   <div id="myHeader"></div>
   <div class="content">
     <div class="login-form">
-      <h2>Welcome to the stealing party.. Let's get you logged in!</h2>
-      <input class="input" label="E-mail" id="email" placeholder="E-mail" type="email" />
-      <input class="input" label="Password" id="password" placeholder="Password" type="password" />
-      <button type="button" class="btnSubmit">Log in</button>
-      <p style="font-size: medium;">Don't have an account? <a href="./signup.html">Sign up!</a></p>
+      <p style="color:red">Unfortunately your payment could not be processed correctly and therefore has failed... Try again later!</a></p>
     </div>
   </div>
   <div id="myFooter"></div>
