--- a/signup.html
+++ b/signup.html
@@ -23,7 +23,7 @@
                 required />
             <input class="input" label="Country" id="country" placeholder="Country" type="text" required />
             <input type="checkbox" id="reg-checkbox">Agree with terms and conditions</input>
-            <button class="btnSubmit" ">Log in</button>
+            <button class="btnSubmit">Log in</button>
             <p style=" font-size: medium;">Already have an account? <a href="./login.html">Log in!</a></p>
         </div>
     </div>
